--- a/k8s/demo/common/ccd/ccd-full.yaml
+++ b/k8s/demo/common/ccd/ccd-full.yaml
@@ -97,6 +97,7 @@ spec:
           REDIS_PORT: 6379
           REDIS_PASSWORD: fake-password
           REDIS_SSL_ENABLED: ""
+          DEBUG: ccd-case-activity-api:*
         keyVaults:
       redis:
         enabled: true
