--- a/k8s/demo/common/rd/profile-sync.yaml
+++ b/k8s/demo/common/rd/profile-sync.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/rd/profile-sync:demo
       environment:
-        RPE_URL: http://rpe.core-compute-demo.internal
+        IDAM_URL: https://idam-api.demo.platform.hmcts.net
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
