--- a/k8s/demo/common/rd/user-profile-api.yaml
+++ b/k8s/demo/common/rd/user-profile-api.yaml
@@ -23,6 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/rd/user-profile-api:demo
       environment:
         IDAM_URL: https://idam-api.demo.platform.hmcts.net
+        RPE_URL: http://rpe.core-compute-demo.internal
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
