--- a/k8s/prod/common/reform-scan/blob-router.yaml
+++ b/k8s/prod/common/reform-scan/blob-router.yaml
@@ -60,7 +60,7 @@ spec:
         environment:
           TEST_URL: "http://reform-scan-blob-router-prod.service.core-compute-prod.internal"
           SLACK_CHANNEL: "bsp-test-notices"
-          SLACK_NOTIFY_SUCCESS: true
+          SLACK_NOTIFY_SUCCESS: false
           TEST_STORAGE_CONTAINER_NAME: "bulkscan"
           TEST_STORAGE_ACCOUNT_URL: "https://reformscan.platform.hmcts.net"
           API_GATEWAY_URL: "https://core-api-mgmt-prod.azure-api.net/reform-scan"
