--- a/k8s/aat/common/financial-remedy/finrem-cos.yaml
+++ b/k8s/aat/common/financial-remedy/finrem-cos.yaml
@@ -25,6 +25,7 @@ spec:
         FEATURE_APPROVED_CONSENT_ORDER_NOTIFICATION_LETTER: true
         FEATURE_HWF_SUCCESSFUL_NOTIFICATION_LETTER: true
         FEATURE_ASSIGNED_TO_JUDGE_NOTIFICATION_LETTER: true
+        FEATURE_CONSENT_ORDER_NOT_APPROVED_APPLICANT_DOCUMENT_GENERATION: true
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
