--- a/k8s/sandbox/cluster-01/kube-system/nodelocaldns.yaml
+++ b/k8s/sandbox/cluster-01/kube-system/nodelocaldns.yaml
@@ -13,6 +13,36 @@
 # limitations under the License.
 #
 
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: node-local-dns
+  namespace: kube-system
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kube-dns-upstream
+  namespace: kube-system
+  labels:
+    k8s-app: kube-dns
+    kubernetes.io/name: "KubeDNSUpstream"
+spec:
+  ports:
+    - name: dns
+      port: 53
+      protocol: UDP
+      targetPort: 53
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
+      targetPort: 53
+  selector:
+    k8s-app: kube-dns
+
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -21,7 +51,6 @@ metadata:
 data:
   Corefile: |
     cluster.local:53 {
-        log
         errors
         cache {
                 success 9984 30
@@ -37,7 +66,6 @@ data:
         health 169.254.20.10:28080
         }
     in-addr.arpa:53 {
-        log
         errors
         cache 30
         reload
@@ -49,7 +77,6 @@ data:
         prometheus :9253
         }
     ip6.arpa:53 {
-        log
         errors
         cache 30
         reload
@@ -61,7 +88,6 @@ data:
         prometheus :9253
         }
     .:53 {
-        log
         errors
         cache 30
         reload
@@ -114,7 +140,6 @@ spec:
             - "/etc/Corefile"
             - "-upstreamsvc"
             - "kube-dns-upstream"
-            - -skipteardown
           securityContext:
             privileged: true
           ports:
