--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -53,16 +53,16 @@ spec:
           endpoints:
             - targetPort: 3030
           path: /metrics
+      additionalPodMonitors:
         - name: "nodelocaldns"
           selector:
-            matchLabels:
-              k8s-app: node-local-dns
+            k8s-app: node-local-dns
           namespaceSelector:
             matchNames:
               - kube-system
-          endpoints:
-            - targetPort: 9253
-          path: /metrics
+          podMetricsEndpoints:
+            - port: 9253
+              path: /metrics
       ingress:
         enabled: true
 
