--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -62,7 +62,7 @@ spec:
             matchNames:
               - kube-system
           podMetricsEndpoints:
-            - port: 9253
+            - port: "9253"
               path: /metrics
       ingress:
         enabled: true
