--- a/k8s/prod/common/divorce/div-pfe.yaml
+++ b/k8s/prod/common/divorce/div-pfe.yaml
@@ -5,7 +5,7 @@ metadata:
   name: div-pfe
   namespace: divorce
   annotations:
-    flux.weave.works/automated: "false"
+    flux.weave.works/automated: "true"
     flux.weave.works/tag.nodejs: glob:prod-*
 spec:
   releaseName: div-pfe
