--- a/k8s/demo/common/sscs/sscs-tya-notif.yaml
+++ b/k8s/demo/common/sscs/sscs-tya-notif.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: sscs
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:pr-924-*
+    flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: sscs-tya-notif
   rollback:
