--- a/k8s/demo/common/sscs/sscs-tribunals-api.yaml
+++ b/k8s/demo/common/sscs/sscs-tribunals-api.yaml
@@ -25,6 +25,7 @@ spec:
       environment:
         READY_TO_LIST_OFFICES: DWP PIP (1),DWP PIP (2),DWP PIP (3),DWP PIP (4),DWP
           PIP (5),DWP PIP (6),DWP PIP (7),DWP PIP (8),DWP PIP (9),DWP PIP (AE)
+        TEST: bump
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
