--- a/k8s/demo/common/sscs/sscs-evidence-share.yaml
+++ b/k8s/demo/common/sscs/sscs-evidence-share.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/sscs/evidence-share:prod-b14faf4b
       environment:
-        BULK_SCAN_MIGRATED: false
+        BULK_SCAN_MIGRATED: true
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
