--- a/k8s/prod/cluster-00/pcq/pcq-consolidation-service.yaml
+++ b/k8s/prod/cluster-00/pcq/pcq-consolidation-service.yaml
@@ -20,6 +20,8 @@ spec:
       schedule: "0 18 1-31/2 * *"
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/pcq/consolidation-service:prod-ae7c1afa
+      environment:
+        IDAM_API_URL: https://idam-api.platform.hmcts.net
     global:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
