--- a/k8s/prod/common/sscs/sscs-tya-notif.yaml
+++ b/k8s/prod/common/sscs/sscs-tya-notif.yaml
@@ -26,7 +26,7 @@ spec:
         IDAM_API_JWK_URL: https://idam-api.platform.hmcts.net/jwks
         IDAM_URL: https://idam-api.platform.hmcts.net
         EVIDENCE_SUBMISSION_INFO_LINK: https://www.track-benefit-appeal.service.gov.uk/evidence/appeal_id
-        SSCS_MANAGE_EMAILS_LINK: https://www.track-benefit-appeal.service.gov.uk/manage-email-notifications/mac
+        SSCS_MANAGE_EMAILS_LINK: https://www.manage.appeal-benefit-decision.service.gov.uk/manage-email-notifications/mac
         SSCS_TRACK_YOUR_APPEAL_LINK: https://www.track-benefit-appeal.service.gov.uk/trackyourappeal/appeal_id
         MYA_LINK: https://www.manage.appeal-benefit-decision.service.gov.uk/sign-in?tya=appeal_id
         MYA_EVIDENCE_LINK: https://www.manage.appeal-benefit-decision.service.gov.uk/support-evidence
