--- a/k8s/demo/common/rd/professional-api.yaml
+++ b/k8s/demo/common/rd/professional-api.yaml
@@ -24,6 +24,7 @@ spec:
       environment:
         IDAM_URL: https://idam-api.demo.platform.hmcts.net
         CCD_URL: http://ccd-user-profile-api-demo.service.core-compute-demo.internal
+        RPE_URL: http://rpe.core-compute-demo.internal
 
     global:
       environment: demo
