--- a/k8s/demo/common/sscs/sscs-bulk-scan.yaml
+++ b/k8s/demo/common/sscs/sscs-bulk-scan.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: sscs
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-474-b75c4cd6
 spec:
   releaseName: sscs-bulk-scan
   rollback:
@@ -23,7 +23,6 @@ spec:
       image: hmctspublic.azurecr.io/sscs/bulk-scan:prod-2dd6c699
       environment:
         READY_TO_LIST_OFFICES: 1,2,3,4,5,6,7,8,9,AE
-        TEST: dummy
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
