--- a/k8s/demo/common/sscs/sscs-tribunals-api.yaml
+++ b/k8s/demo/common/sscs/sscs-tribunals-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: sscs
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-939-abde21a8
 spec:
   releaseName: sscs-tribunals-api
   rollback:
@@ -25,6 +25,7 @@ spec:
       environment:
         READY_TO_LIST_OFFICES: DWP PIP (1),DWP PIP (2),DWP PIP (3),DWP PIP (4),DWP
           PIP (5),DWP PIP (6),DWP PIP (7),DWP PIP (8),DWP PIP (9),DWP PIP (AE)
+        TEST: dummy
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
