--- a/k8s/sandbox/common/istio/identity.yaml
+++ b/k8s/sandbox/common/istio/identity.yaml
@@ -2,8 +2,8 @@
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentity
 metadata:
-  name: istio-system
-  namespace: istio
+  name: istio
+  namespace: istio-system
 spec:
   type: 0
   ResourceID: /subscriptions/b72ab7b7-723f-4b18-b6f6-03b0f2c6a1bb/resourceGroups/managed-identities-sbox-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/istio-sandbox-mi
@@ -14,7 +14,7 @@ apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentityBinding
 metadata:
   name: istio-binding
-  namespace: istio
+  namespace: istio-system
 spec:
   AzureIdentity: istio
   Selector: istio
