--- a/k8s/perftest/common/ccd/definition-store-api.yaml
+++ b/k8s/perftest/common/ccd/definition-store-api.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccd/definition-store-api:pr-621-fa7ab747
+      environment:
+        ELASTIC_SEARCH_FAIL_ON_IMPORT: true
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
