--- a/k8s/aat/common/ccd/api-gateway-web.yaml
+++ b/k8s/aat/common/ccd/api-gateway-web.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:pr-319-*
+    flux.weave.works/tag.nodejs: glob:prod-*
 spec:
   releaseName: ccd-api-gateway-web
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 4
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/api-gateway-web:pr-319-a99d5174
+      image: hmctspublic.azurecr.io/ccd/api-gateway-web:prod-0cd9ec1a
       environment:
         CORS_ORIGIN_WHITELIST: "*"
     global:
