--- a/k8s/prod/common/ccd/definition-store-api.yaml
+++ b/k8s/prod/common/ccd/definition-store-api.yaml
@@ -28,4 +28,4 @@ spec:
       environment: prod
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
-      test: test
+      test: test1
