--- a/k8s/demo/common/fees-pay/ccpay-payment-app.yaml
+++ b/k8s/demo/common/fees-pay/ccpay-payment-app.yaml
@@ -23,7 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/payment/api:pr-937-5453c87-20210625125338
       imagePullPolicy: Always
       environment:
-        DUMMY_RESTART_VAR: false
+        DUMMY_RESTART_VAR: true
         POSTGRES_HOST: payment-postgres-db-v11-{{ .Values.global.environment }}.postgres.database.azure.com
         POSTGRES_USERNAME: payment@payment-postgres-db-v11-{{ .Values.global.environment
           }}
