Reverted PR images for Demo, Perftest

--- a/k8s/namespaces/dm-store/dm-store/demo.yaml
+++ b/k8s/namespaces/dm-store/dm-store/demo.yaml
@@ -2,10 +2,10 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: dm-store
-  annotations:
-    fluxcd.io/automated: "true"
-    fluxcd.io/tag.java: glob:pr-1040-*
-    hmcts.github.com/prod-automated: disabled
+#  annotations:
+#    fluxcd.io/automated: "true"
+#    fluxcd.io/tag.java: glob:pr-1040-*
+#    hmcts.github.com/prod-automated: disabled
 spec:
   values:
     java:
@@ -27,4 +27,4 @@ spec:
           TEST_URL: http://dm-store-java
           SLACK_CHANNEL: "em-dev-chat"
           SLACK_NOTIFY_SUCCESS: "true"
-      image: hmctspublic.azurecr.io/dm/store:pr-1040-a8f88f2-20210709115024
+#      image: hmctspublic.azurecr.io/dm/store:pr-1040-a8f88f2-20210709115024
