--- a/k8s/namespaces/dm-store/dm-store/perftest.yaml
+++ b/k8s/namespaces/dm-store/dm-store/perftest.yaml
@@ -2,10 +2,10 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: dm-store
-  annotations:
-    fluxcd.io/automated: "true"
-    fluxcd.io/tag.java: glob:pr-1040-*
-    hmcts.github.com/prod-automated: disabled
+#  annotations:
+#    fluxcd.io/automated: "true"
+#    fluxcd.io/tag.java: glob:pr-1040-*
+#    hmcts.github.com/prod-automated: disabled
 spec:
   values:
     java:
@@ -21,4 +21,4 @@ spec:
         LOG_LEVEL_SPRING_WEB: DEBUG
         LOG_LEVEL_DM: DEBUG
         MAX_NON_MEDIA_FILE_SIZE: 1024
-      image: hmctspublic.azurecr.io/dm/store:pr-1040-a8f88f2-20210709115024
+#      image: hmctspublic.azurecr.io/dm/store:pr-1040-a8f88f2-20210709115024
