--- a/k8s/ithc/common/money-claims/claim-store.yaml
+++ b/k8s/ithc/common/money-claims/claim-store.yaml
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/cmc/claim-store:pr-2208-91ce7335
+      image: hmctspublic.azurecr.io/cmc/claim-store:pr-2208-b406971-20210709145817
       environment:
         CLAIM_STORE_TEST_SUPPORT_ENABLED: true
         FEATURE_TOGGLES_SAVE_CLAIM_STATE_ENABLED: true
