--- a/k8s/demo/common/probate/probate-back-office.yaml
+++ b/k8s/demo/common/probate/probate-back-office.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/probate/back-office:pr-1413-60dbdfc-20210709111617
       environment:
-        CCD_GATEWAY_HOST: https://gateway-ccd.demo.platform.hmcts.net
+        CCD_GATEWAY_HOST: https://manage-case.demo.platform.hmcts.net
         VAR1_DUMMY: DUMMY
     global:
       environment: demo
