--- a/k8s/namespaces/wa/wa-task-batch-ad-hoc-delete-process-instances/wa-task-batch-ad-hoc-delete-process-instances.yaml
+++ b/k8s/namespaces/wa/wa-task-batch-ad-hoc-delete-process-instances/wa-task-batch-ad-hoc-delete-process-instances.yaml
@@ -2,6 +2,11 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: wa-task-batch-ad-hoc-delete-process-instances
+  fluxcd.io/automated: "true"
+  fluxcd.io/tag.java: glob:prod-*
+  fluxcd.io/tag.nodejs: glob:prod-*
+  fluxcd.io/tag.job: glob:prod-*
+  fluxcd.io/tag.function: glob:prod-*
 spec:
   releaseName: wa-task-batch-ad-hoc-delete-process-instances
   chart:
@@ -19,4 +24,3 @@ spec:
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
       jobKind: Job
-
