--- a/apps/jenkins/base/kustomization.yaml
+++ b/apps/jenkins/base/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../jenkins/jenkins.yaml
+  - ../jenkins/jenkins-helmrepo.yaml
   - ../jenkins/logging.yaml
   - ../jenkins/disk.yaml
   - ../jenkins/identity.yaml
