--- a/k8s/demo/common/sscs/sscs-tya-notif.yaml
+++ b/k8s/demo/common/sscs/sscs-tya-notif.yaml
@@ -29,6 +29,7 @@ spec:
         PDF_SERVICE_HEALTH_URL: https://docmosis.demo.platform.hmcts.net/rs/status
         PDF_SERVICE_BASE_URL: https://docmosis.demo.platform.hmcts.net/rs/render
         SECURE_DOC_STORE_FEATURE: true
+        CASE_DOCUMENT_AM_URL: https://ccd-case-document-am-api-demo.service.core-compute-demo.internal
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
