--- a/k8s/prod/common/fees-pay/ccpay-payment-app.yaml
+++ b/k8s/prod/common/fees-pay/ccpay-payment-app.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/payment/api:prod-243ee1f-20210712110153
       environment:
-        TRUSTED_S2S_SERVICE_NAMES: "cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,civil_service,probate_backend"
+        TRUSTED_S2S_SERVICE_NAMES: "cmc,cmc_claim_store,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,civil_service,probate_backend,iac"
         DUMMY_RESTART_VAR: true
         AUTH_IDAM_CLIENT_BASEURL: https://idam-api.platform.hmcts.net
         CARD_PAYMENTS_EMAIL_FROM: no-reply@mail-payment.platform.hmcts.net
