--- a/k8s/namespaces/bsp/bulk-scan-orchestrator/demo.yaml
+++ b/k8s/namespaces/bsp/bulk-scan-orchestrator/demo.yaml
@@ -2,17 +2,12 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: bulk-scan-orchestrator
-  annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:pr-1458-*
-    hmcts.github.com/prod-automated: disabled
 spec:
   values:
     java:
       environment:
-        ROOT_LOGGING_LEVEL: DEBUG
+        REFORM_LOG_LEVEL: DEBUG
         TRANSFORMATION_URL_SSCS: "http://sscs-bulk-scan-demo.service.core-compute-demo.internal/transform-scanned-data"
         AUTO_CASE_CREATION_ENABLED_SSCS: "true"
         CASE_DEFINITION_HAS_ENVELOPE_IDS_SSCS: "true"
         CAN_SEARCH_CASES_BY_ENVELOPE_ID_SSCS: "true"
-      image: hmctspublic.azurecr.io/bulk-scan/orchestrator:pr-1454-223f778-20210707093209
