--- a/k8s/namespaces/fees-pay/ccpay-refunds-api/demo.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-refunds-api/demo.yaml
@@ -7,4 +7,4 @@ spec:
     java:
       ingressClass: traefik-no-proxy
       environment:
-        DUMMY_VARIABLE: false
+        DUMMY_VARIABLE: true
