--- a/apps/monitoring/ptl-intsvc/00/kustomization.yaml
+++ b/apps/monitoring/ptl-intsvc/00/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../base
-  - identity.yaml
+  - ../base
 
 patchesStrategicMerge:
-  - ../../pact-broker/cftptl-intsvc.yaml
+  - ../../kube-prometheus-stack/ptl-intsvc/00.yaml
