--- a/apps/monitoring/ptl-intsvc/base/kustomization.yaml
+++ b/apps/monitoring/ptl-intsvc/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../kube-prometheus-stack/jenkins-alerts-rules.yaml
   - prometheus-values.yaml
 
 patchesStrategicMerge:
