--- a/k8s/namespaces/am/am-role-assignment-service/demo.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/demo.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      replicas: 5
       environment:
         AM_INFO: true
         APPLICATION_LOGGING_LEVEL: INFO
