--- a/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
@@ -9,3 +9,5 @@ spec:
       environment:
         AM_INFO: true
         APPLICATION_LOGGING_LEVEL: INFO
+        MAX_POOL_SIZE: 24
+        MINIMUM_IDLE: 8
