--- a/clusters/ptl-intsvc/base/kustomization.yaml
+++ b/clusters/ptl-intsvc/base/kustomization.yaml
@@ -12,3 +12,4 @@ resources:
 - ../../../apps/pact-broker/base/kustomize.yaml
 - ../../../apps/jenkins/base/kustomize.yaml
 - ../../../apps/slack-help-bot/base/kustomize.yaml
+- ../../../apps/response/base/kustomize.yaml
