--- a/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
@@ -5,7 +5,9 @@ metadata:
 spec:
   values:
     java:
-      replicas: 9
+      replicas: 5
       environment:
         AM_INFO: true
         APPLICATION_LOGGING_LEVEL: INFO
+        MAX_POOL_SIZE: 24
+        MINIMUM_IDLE: 8
