--- a/k8s/namespaces/bsp/bulk-scan-orchestrator/demo.yaml
+++ b/k8s/namespaces/bsp/bulk-scan-orchestrator/demo.yaml
@@ -2,6 +2,10 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: bulk-scan-orchestrator
+  annotations:
+    flux.weave.works/automated: "true"
+    flux.weave.works/tag.java: glob:pr-1474-*
+    hmcts.github.com/prod-automated: disabled
 spec:
   values:
     java:
@@ -11,3 +15,6 @@ spec:
         AUTO_CASE_CREATION_ENABLED_SSCS: "true"
         CASE_DEFINITION_HAS_ENVELOPE_IDS_SSCS: "true"
         CAN_SEARCH_CASES_BY_ENVELOPE_ID_SSCS: "true"
+        DELETE_ENVELOPES_DLQ_MESSAGES_ENABLED: "true"
+        DELETE_ENVELOPES_DLQ_MESSAGES_TTL: "60s"
+        DELETE_ENVELOPES_DLQ_MESSAGES_CRON: "*/2 * * * *"
