--- a/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
@@ -7,7 +7,7 @@ spec:
     java:
       replicas: 5
       environment:
-        AM_INFO: true
+        AM_INFO: false
         APPLICATION_LOGGING_LEVEL: INFO
         MAX_POOL_SIZE: 24
         MINIMUM_IDLE: 8
