--- a/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
@@ -6,6 +6,10 @@ spec:
   values:
     java:
       replicas: 5
+      memoryRequests: "1024Mi"
+      memoryLimits: "2048Mi"
+      cpuRequests: "1000m"
+      cpuLimits: "2000m"
       environment:
         AM_INFO: false
         APPLICATION_LOGGING_LEVEL: INFO
