--- a/k8s/demo/common/divorce/div-cos.yaml
+++ b/k8s/demo/common/divorce/div-cos.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: divorce
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:pr-1268-*
+    flux.weave.works/tag.java: glob:pr-1412-*
 spec:
   releaseName: div-cos
   rollback:
@@ -27,7 +27,7 @@ spec:
       readinessTimeout: 5
       readinessPeriod: 15
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/div/cos:pr-1268-e5ae5867
+      image: hmctspublic.azurecr.io/div/cos:pr-1412-9918b33-20210714155450
       environment:
         IDAM_API_URL: "https://idam-api.demo.platform.hmcts.net"
         FEATURE_DN_REFUSAL: true
