--- a/k8s/ithc/common-overlay/fees-pay/kustomization.yaml
+++ b/k8s/ithc/common-overlay/fees-pay/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
 patchesStrategicMerge:
 - ../../../namespaces/fees-pay/ccpay-callback-function/ithc.yaml
+- ../../../namespaces/fees-pay/ccpay-refunds-api/ithc.yaml
 patchesJson6902:
 - target:
     group: rbac.authorization.k8s.io
