--- a/k8s/perftest/common-overlay/fees-pay/kustomization.yaml
+++ b/k8s/perftest/common-overlay/fees-pay/kustomization.yaml
@@ -4,6 +4,8 @@ namespace: fees-pay
 bases:
 - ../../../namespaces/fees-pay
 - ../../../namespaces/all-namespaces/nonprod-role.yaml
+patchesStrategicMerge:
+- ../../../namespaces/fees-pay/ccpay-refunds-api/perftest.yaml
 patchesJson6902:
 - target:
     group: rbac.authorization.k8s.io
