--- a/k8s/namespaces/nfdiv/nfdiv-case-api/nfdiv-case-api.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-case-api/nfdiv-case-api.yaml
@@ -16,3 +16,4 @@ spec:
       environment:
         VAR_TA: trigger13
         AWAITING_CONDITIONAL_ORDER_SCHEDULED_CRON: 0 0/10 * * * ?
+        CASE_HOLDING_WEEKS: 0
