--- a/k8s/aat/common/nfdiv/nfdiv-case-api.yaml
+++ b/k8s/aat/common/nfdiv/nfdiv-case-api.yaml
@@ -2,6 +2,9 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: nfdiv-case-api
+  annotations:
+    flux.weave.works/automated: "true"
+    flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: nfdiv-case-api
   chart:
