--- a/k8s/demo/common/fees-pay/ccpay-payment-app.yaml
+++ b/k8s/demo/common/fees-pay/ccpay-payment-app.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: fees-pay
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: pr-944-*
+    flux.weave.works/tag.java: pr-952-*
 spec:
   releaseName: ccpay-payment-api
   rollback:
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/payment/api:pr-944-1d25736-20210715164621
+      image: hmctspublic.azurecr.io/payment/api:pr-952
       imagePullPolicy: Always
       environment:
         DUMMY_RESTART_VAR: false
