--- a/k8s/demo/cluster-00/fees-pay/pba-payment-job.yaml
+++ b/k8s/demo/cluster-00/fees-pay/pba-payment-job.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: fees-pay
   annotations:
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.job: glob:prod-*
+    fluxcd.io/tag.job: glob:pr-17-*
 spec:
   releaseName: pba-csv-report
   rollback:
@@ -18,7 +18,7 @@ spec:
     version: 0.0.6
   values:
     job:
-      image: "hmctspublic.azurecr.io/payment/jobs:prod-eac66225"
+      image: "hmctspublic.azurecr.io/payment/jobs:pr-17"
       schedule: "0 0/5 0 ? * * *"
       environment:
         REPORT_NAME: pba-csv-report
