--- a/apps/flux-system/ptl-intsvc/base/kustomization.yaml
+++ b/apps/flux-system/ptl-intsvc/base/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../base/image-automation-components.yaml
+  - ../../base/image-update-automation.yaml
   - git-credentials.yaml
