--- a/k8s/namespaces/dm-store/dm-store/perftest.yaml
+++ b/k8s/namespaces/dm-store/dm-store/perftest.yaml
@@ -9,16 +9,11 @@ metadata:
 spec:
   values:
     java:
-      replicas: 1
-      memoryRequests: "2048Mi"
-      cpuRequests: "1000m"
+#      replicas: 1
+#      memoryRequests: "2048Mi"
+#      cpuRequests: "1000m"
       environment:
-        ENABLE_METADATA_MIGRATION: 'true'
-        DOCUMENT_METADATA_UPDATE_MILLISECONDS: "900000"
+#        ENABLE_METADATA_MIGRATION: 'true'
+#        DOCUMENT_METADATA_UPDATE_MILLISECONDS: "900000"
         ENABLE_TTL: false
-        LOG_OUTPUT: single
-        ROOT_LOGGING_LEVEL: DEBUG
-        LOG_LEVEL_SPRING_WEB: DEBUG
-        LOG_LEVEL_DM: DEBUG
-        MAX_NON_MEDIA_FILE_SIZE: 1024
 #      image: hmctspublic.azurecr.io/dm/store:pr-1040-a8f88f2-20210709115024
