--- a/k8s/demo/common/fees-pay/fees-register-frontend.yaml
+++ b/k8s/demo/common/fees-pay/fees-register-frontend.yaml
@@ -23,7 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/fees-register/frontend:pr-362-4d4b7a6-20210716151540
       imagePullPolicy: Always
       environment:
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
