--- a/k8s/prod/common/sscs/sscs-tribunals-frontend.yaml
+++ b/k8s/prod/common/sscs/sscs-tribunals-frontend.yaml
@@ -45,6 +45,10 @@ spec:
         ALLOW_IIDB_ENABLED: "false"
         ALLOW_JSA_ENABLED: "false"
         ALLOW_MA_ENABLED: "false"
+        ALLOW_BSPS_ENABLED: "false"
+        ALLOW_IDB_ENABLED: "false"
+        ALLOW_PC_ENABLED: "false"
+        ALLOW_RP_ENABLED: "false"
         ALLOW_COOKIE_BANNER_ENABLED: "false"
         MULTIPLE_DRAFTS_ENABLED: "true"
         ALLOW_SF_ENABLED: "false"
