--- a/k8s/aat/common/fees-pay/ccpay-bubble-frontend.yaml
+++ b/k8s/aat/common/fees-pay/ccpay-bubble-frontend.yaml
@@ -23,7 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:prod-187fdb1-20210712230120
       ingressHost: paybubble.aat.platform.hmcts.net
     environment:
-      DUMMY_RESTART_VAR: true
+      DUMMY_RESTART_VAR: false
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
