--- a/k8s/aat/common/financial-remedy/finrem-ps.yaml
+++ b/k8s/aat/common/financial-remedy/finrem-ps.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: financial-remedy
   annotations:
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.java: glob:prod-*
+    fluxcd.io/tag.java: glob:pr-112-*
 spec:
   releaseName: finrem-ps
   rollback:
